// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@ast-decorators/core plugin-options compiles in another way if option has different state 1`] = `
"class Link extends HTMLAnchorElement {
  _bar = 'baz';
}"
`;

exports[`@ast-decorators/core plugin-options compiles in one way if option has one state 1`] = `
"class Link extends HTMLAnchorElement {
  #_bar = 'baz';
}"
`;

exports[`@ast-decorators/core plugin-options ignores decorator if its name is specified in "names" exclusion options 1`] = `
"import { bar } from './other';
import { $bar, $baz } from './other-two';
import { $fuzz } from './fuzz';

@$bar
@$baz
@$fuzz
@bar
class Foo {
  #_bar = 'baz';
}"
`;

exports[`@ast-decorators/core plugin-options ignores decorator if node module it is imported from is specified in "nodeModules" exclusion option 1`] = `
"import { bar } from 'ignored-module/path/to/file';
import { baz } from 'ignored-module';
import { fuzz } from 'other-ignored-module/path/to/dir/somefile';

@fuzz
@baz
@bar
class Foo {
  #_bar = 'baz';
}"
`;

exports[`@ast-decorators/core plugin-options ignores decorator if path it is imported from is specified in "paths" exclusion option 1`] = `
"import { bar } from './path/to/decorator';
import { baz } from '../decorator.ignore';

@baz
@bar
class Foo {
  #_bar = 'baz';
}"
`;
